fixed footer alignment

--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -39,7 +39,7 @@ p {
   text-align: right; */
   margin: 0;
   position: relative;
-  bottom: 5px;
+  bottom: 2px;
 }
 
 /*#credit-footer {
